# agent-keepalive

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
src/agent_keepalive/: __init__.py  activity.py  app_server.py  claude_supervisor.py  cli.py  logging_utils.py  paths.py  rpc.py  runner.py  state.py  timeparse.py  ws.py
src/agent_keepalive/providers/: __init__.py  base.py  claude.py  codex.py  codex_recovery.py
systemd/: agent-keepalive@.service
tests/: test_activity.py  test_claude_supervisor.py  test_logging.py  test_providers.py  test_release.py  test_runner.py  test_timeparse.py
